@@ -1,15 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/Attic/rspec-rails-1.1.10.ebuild,v 1.1 2008/10/24 07:14:22 graaff Exp $
-
-inherit gems
-
-DESCRIPTION="RSpec's official Ruby on Rails plugin"
-HOMEPAGE="http://rspec.info/"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-RDEPEND=">=dev-ruby/rspec-1.1.10"
